# ConformalIdealDelaunay

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  environment.yml
.github/workflows/: cmake.yml
cmake/: FindMPFR.cmake
data/examples/: aircraft_Th_hat  elephant_Th_hat  fertility_tri_Th_hat
figures/: combine_logs.py
figures/MPZ_closed/: MPZ_closed.sh  MPZ_closed.tex
figures/MPZ_cut/: MPZ_cut.sh  MPZ_cut.tex
figures/MPZ_open/: MPZ_open.sh  MPZ_open.tex
figures/compare_efficiency/: compare_efficiency.py  compare_efficiency.sh  compare_efficiency.tex
figures/energy_line_search/: energy_line_search.sh  energy_line_search.tex
figures/extreme_angles/: extreme_angles.py  extreme_angles.sh  extreme_angles.tex
figures/flip_type_stats/: flip_type_stats.sh  flip_type_stats.tex
figures/projgrad/: projgrad.py  projgrad.sh  projgrad.tex  translate_lambda.py
figures/random-sphere1K/: decay0_499.tex  decay500_999.tex  random-sphere1K.sh  random-sphere1K.tex
figures/variable_genus/: genus.py  genus.sh  genus.tex
figures/variable_precision/: precision.py  precision.sh  precision.tex
figures/variable_resolution_sphere/: res_spheres.py  res_spheres.sh
py/: diff_pickle.py  overload_math.py  render.py  script_conformal.py
src/conformal_ideal_delaunay/: Angle.hh  BarycenterMapping.cc  BarycenterMapping.hh  Claussen.hh  ConformalIdealDelaunayMapping.hh  ConformalInterface.hh  ConformalPybind.cpp  Halfedge.cc  Halfedge.hh  Layout.hh  OverlayMesh.cc  OverlayMesh.hh  Sampling.hh
src/conformal_seamless_similarity/: CSM.cpp  ConformalSeamlessSimilarityMapping.hh
src/util/: argh.h  check_flip.cc  check_flip.hh  mpreal.h  plot.cc  plot.cpp  plot.h
